--- a/register.html
+++ b/register.html
@@ -4,6 +4,7 @@
         <title>Registro</title>
     </head>
     <body>
+        <link rel="stylesheet" href="register.css" />
         <h1>Registro</h1>
         <form id="registerForm">
             <input
