--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
         <title>Login</title>
     </head>
     <body>
+        <link rel="stylesheet" href="login.css" />
         <h1>Login</h1>
         <form id="loginForm">
             <input
@@ -18,9 +19,3 @@
         <script src="auth.js"></script>
     </body>
 </html>
-
-<!--
-
-        teste
-
--->
